--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="../portsem.png" class="about-img"
+                    <img src="./portsem.png" class="about-img"
                         alt="">
                 </div>
                 <div class="about-caption">
@@ -99,7 +99,7 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-4">
-                    <a href="https://happypaw.website" class="portfolio-card">
+                    <a href="" class="portfolio-card">
                         <img src="assets/imgs/folio-1.png" class="portfolio-card-img"
                             alt="Meu TCC">
                         <span class="portfolio-card-overlay">
@@ -107,6 +107,7 @@
                                 <h4>Happy Paw</h5>
                                     <p class="font-weight-normal">Meu TCC do técnico!</p>
                                     <p class="font-weight-normal">este projeto foi desenvolvido para concluir meu técnico em desenvolvimento de sistemas e contém um desenvolvimento web bem bonito e um software desenvolvido para gerenciar os animais da ONG.</p>
+                                    <p class="font-weight-normal">O link para o site postado é: <a href="https://happypaw.website">https://happypaw.website</a></p>
                             </span>
                         </span>
                     </a>
