--- a/index.html
+++ b/index.html
@@ -99,15 +99,14 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-4">
-                    <a href="" class="portfolio-card">
+                    <a href="https://github.com/Murilovieira0703/happypaw" class="portfolio-card">
                         <img src="assets/imgs/folio-1.png" class="portfolio-card-img"
                             alt="Meu TCC">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Happy Paw</h5>
                                     <p class="font-weight-normal">Meu TCC do técnico!</p>
-                                    <p class="font-weight-normal">este projeto foi desenvolvido para concluir meu técnico em desenvolvimento de sistemas e contém um desenvolvimento web bem bonito e um software desenvolvido para gerenciar os animais da ONG.</p>
-                                    <p class="font-weight-normal">O link para o site postado é: <a href="https://happypaw.website">https://happypaw.website</a></p>
+                                    <p class="font-weight-normal">este projeto foi desenvolvido para concluir meu técnico em desenvolvimento de sistemas e contém um desenvolvimento web bem bonito e um software desenvolvido para gerenciar os animais da ONG. O link para o site postado é: <a href="https://happypaw.website">https://happypaw.website</a></p>
                             </span>
                         </span>
                     </a>
