update para atualizar

--- a/index.html
+++ b/index.html
@@ -105,8 +105,31 @@
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Happy Paw</h5>
-                                    <p class="font-weight-normal">Meu TCC do técnico!</p>
-                                    <p class="font-weight-normal">este projeto foi desenvolvido para concluir meu técnico em desenvolvimento de sistemas e contém um desenvolvimento web bem bonito e um software desenvolvido para gerenciar os animais da ONG. O link para o site postado é: <a href="https://happypaw.website">https://happypaw.website</a></p>
+                                    <p class="font-weight-normal">Meu TCC do técnico! <br> este projeto foi desenvolvido para concluir meu técnico em desenvolvimento de sistemas e contém um desenvolvimento web bem bonito e um software desenvolvido para gerenciar os animais da ONG.</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://github.com/mfarinazzo/IPP" class="portfolio-card">
+                        <img src="assets/imgs/folio-2.png" class="portfolio-card-img"
+                            alt="projeto 2">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>CAGEDs</h5>
+                                    <p class="font-weight-normal">Projeto que cria um complexo banco de dados! <br> Pipeline completo em Python que busca, processa e envia dados do CAGED diretamente do FTP do governo até o servidor via API. Tudo orquestrado por um único script com execução via cron job — robusto, resiliente e totalmente automatizado.</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://github.com/mfarinazzo/IPP-solucao" class="portfolio-card">
+                        <img src="assets/imgs/folio-3.png" class="portfolio-card-img"
+                            alt="Meu TCC">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>CAGEDs paralelizados!</h5>
+                                    <p class="font-weight-normal">Projeto de paralelização <br>Mesma solução do projeto ao lado, porém para um trabalho de paralelização.</p>
                             </span>
                         </span>
                     </a>
